--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Watch Face Generator with Auto-Cleanup
+name: Watch Face Generator with Auto-Cleanup and Preview Fix
 
 on:
   repository_dispatch:
@@ -48,46 +48,116 @@ jobs:
 
       # 4. Prepare project files
       - name: Prepare project directory
+        id: prepare-project
         run: |
-          $modelPath = Get-Content "$env:RUNNER_TEMP\model_path.txt"
+          # 设置项目目录路径
           $projectDir = "project"
-          New-Item -Type Directory -Path $projectDir -Force
+          $fprjFile = "fprj.fprj"
           
+          # 复制模型到项目目录
+          $modelPath = Get-Content "$env:RUNNER_TEMP\model_path.txt"
+          New-Item -Type Directory -Path $projectDir -Force
           Copy-Item "$(Split-Path $modelPath -Parent)\*" $projectDir -Recurse
           
-          $fprjFile = Get-ChildItem $projectDir -Filter "*.fprj" | Select-Object -First 1
-          if ($fprjFile) {
-              Rename-Item $fprjFile.FullName "fprj.fprj" -Force
+          # 重命名FPRJ文件
+          $fprjOriginal = Get-ChildItem $projectDir -Filter "*.fprj" | Select-Object -First 1
+          if ($fprjOriginal) {
+              Rename-Item $fprjOriginal.FullName (Join-Path $projectDir $fprjFile) -Force
           } else {
               Write-Error "No FPRJ file found"
               exit 1
           }
           
+          # 保存Base64图片到项目目录
           $bytes = [Convert]::FromBase64String((Get-Content "${{ steps.parse-input.outputs.base64_file }}" -Raw))
-          Get-ChildItem $projectDir -Filter "pic.png" -Recurse | ForEach-Object {
-              [IO.File]::WriteAllBytes($_.FullName, $bytes)
-          }
+          $watchfacePicPath = Join-Path $projectDir "pic.png"
+          [IO.File]::WriteAllBytes($watchfacePicPath, $bytes)
           
+          # 同时复制一份作为预览图（pre.png）
+          $previewPath = Join-Path $projectDir "pre.png"
+          Copy-Item $watchfacePicPath $previewPath -Force
+          
+          # 创建输出目录
           New-Item -Type Directory -Path "$projectDir\output" -Force
+          
+          # 记录项目路径
+          echo "project_path=$projectDir" >> $env:GITHUB_OUTPUT
+          echo "fprj_path=$(Join-Path $projectDir $fprjFile)" >> $env:GITHUB_OUTPUT
+          echo "preview_path=$previewPath" >> $env:GITHUB_OUTPUT
 
-      # 5. Set up Python
-      - name: Set up Python 3.10
+      # 5. Set up Python with Pillow
+      - name: Set up Python 3.10 and Pillow
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Install Pillow for image resizing
+        run: pip install Pillow
 
-      # 6. Run compilation script
-      - name: Compile Watch Face
+      # 6. Run compilation script with error handling
+      - name: Compile Watch Face (with retry)
+        id: compile-watchface
         env:
-          PROJECT_PATH: "${{ github.workspace }}/project/fprj.fprj"
+          PROJECT_PATH: "${{ steps.prepare-project.outputs.fprj_path }}"
           OUTPUT_DIR: "${{ github.workspace }}/output"
-        run: python compile_watchface.py
-      
+        run: |
+          # 错误处理函数
+          function Handle-PreviewError {
+            param($errorOutput)
+            
+            # 检查是否是预览尺寸错误
+            if ($errorOutput -match 'Preview has wrong size: (\d+)x(\d+), expected: (\d+)x(\d+)') {
+              $expectedWidth = $Matches[3]
+              $expectedHeight = $Matches[4]
+              
+              # 获取预览图路径
+              $previewPath = "${{ steps.prepare-project.outputs.preview_path }}"
+              
+              # 使用Python调整图片尺寸
+              python -c "`
+                from PIL import Image; `
+                img = Image.open(r'$previewPath'); `
+                img = img.resize(($expectedWidth, $expectedHeight)); `
+                img.save(r'$previewPath'); `
+                print(f'Resized preview to {expectedWidth}x{expectedHeight}')"
+                
+              return $true
+            }
+            return $false
+          }
+          
+          # 首次尝试编译
+          echo "First compilation attempt..."
+          python compile_watchface.py 2>&1 | Tee-Object -Variable output
+          if ($LASTEXITCODE -eq 0) {
+            echo "Compilation succeeded on first attempt"
+            exit 0
+          }
+          
+          # 尝试处理预览尺寸错误
+          if (Handle-PreviewError $output) {
+            # 重新编译
+            echo "Retrying compilation after resizing preview..."
+            python compile_watchface.py
+            if ($LASTEXITCODE -eq 0) {
+              echo "Compilation succeeded after preview fix"
+              exit 0
+            } else {
+              # 第二次编译失败
+              echo "Compilation failed even after preview fix"
+              exit 1
+            }
+          }
+          
+          # 无法识别的错误类型
+          echo "Compilation failed for unknown reasons"
+          exit 1
+
       # 7. Verify output
       - name: Verify Output File
         id: verify-output
         run: |
-          $file = Get-ChildItem "${{ github.workspace }}/output" -Filter "*.face"
+          $outputDir = "${{ github.workspace }}/output"
+          $file = Get-ChildItem $outputDir -Filter "*.face"
           if ($file) {
               echo "face_file=$($file.FullName)" >> $env:GITHUB_OUTPUT
           } else {
