--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,83 +53,85 @@ jobs:
           $projectDir = "project"
           $fprjFile = "fprj.fprj"
           
-          # 复制模型到项目目录（保持原始结构）
+          # 获取模型路径
           $modelPath = Get-Content "$env:RUNNER_TEMP\model_path.txt"
-          New-Item -Type Directory -Path $projectDir -Force
           
-          # 获取源模板目录
+          # 复制模型目录结构到项目目录
+          New-Item -Type Directory -Path $projectDir -Force
           $sourceTemplateDir = Split-Path $modelPath -Parent
           
-          # 递归复制整个模板目录，保持相对路径
-          Get-ChildItem -Path $sourceTemplateDir -Recurse | ForEach-Object {
-              $relativePath = $_.FullName.Substring($sourceTemplateDir.Length + 1)
+          # 递归复制所有文件和文件夹，保持相对路径
+          $filesCopied = 0
+          $directories = Get-ChildItem -Path $sourceTemplateDir -Recurse
+          foreach ($item in $directories) {
+              $relativePath = $item.FullName.Substring($sourceTemplateDir.Length + 1)
               $targetPath = Join-Path $projectDir $relativePath
               
-              if ($_.PSIsContainer) {
-                  New-Item -ItemType Directory -Path $targetPath -Force | Out-Null
+              if ($item.PSIsContainer) {
+                  New-Item -ItemType Directory -Path $targetPath -Force -ErrorAction SilentlyContinue | Out-Null
               } else {
-                  Copy-Item -Path $_.FullName -Destination $targetPath -Force
+                  try {
+                      Copy-Item -Path $item.FullName -Destination $targetPath -Force -ErrorAction Stop
+                      $filesCopied++
+                  } catch {
+                      Write-Warning "Failed to copy $($item.Name): $_"
+                  }
               }
           }
+          Write-Output "Copied $filesCopied files to project directory"
           
-          # 重命名FPRJ文件
-          $fprjOriginal = Get-ChildItem $projectDir -Filter "*.fprj" | Select-Object -First 1
-          if ($fprjOriginal) {
-              Rename-Item -Path $fprjOriginal.FullName -NewName $fprjFile -Force
-              $fprjPath = Join-Path $projectDir $fprjFile
-              Write-Output "Successfully renamed project file to: $fprjPath"
-          } else {
-              Write-Error "No FPRJ file found"
+          # 查找FPRJ文件（修复了查找逻辑）
+          $fprjFiles = @(Get-ChildItem -Path $projectDir -Filter "*.fprj" -Recurse)
+          Write-Output "Found $($fprjFiles.Count) FPRJ files in project directory"
+          
+          # 输出目录树帮助调试
+          Write-Output "Project directory structure:"
+          tree $projectDir /F | Out-String -Width 1024
+          
+          if ($fprjFiles.Count -eq 0) {
+              Write-Error "No FPRJ file found in project directory. Please check that the model path ($modelPath) contains a .fprj file."
               exit 1
           }
+          
+          # 重命名第一个找到的FPRJ文件
+          $fprjOriginal = $fprjFiles[0]
+          $newName = $fprjFile
+          $newPath = Join-Path $fprjOriginal.Directory $newName
+          Rename-Item -Path $fprjOriginal.FullName -NewName $newName -Force
+          Write-Output "Renamed project file: $($fprjOriginal.FullName) -> $newPath"
           
           # 保存Base64图片到正确的路径
           $bytes = [Convert]::FromBase64String((Get-Content "${{ steps.parse-input.outputs.base64_file }}" -Raw))
           
-          # 1. 获取原始pic.png的位置
-          $originalPicPath = Get-ChildItem $projectDir -Filter "pic.png" -Recurse | Select-Object -First 1
-          
-          if ($originalPicPath) {
-              # 2. 保存图片到原始位置
-              [IO.File]::WriteAllBytes($originalPicPath.FullName, $bytes)
-              
-              # 3. 复制预览图到原始位置
-              $originalPreviewPath = Get-ChildItem $projectDir -Filter "pre.png" -Recurse | Select-Object -First 1
-              if ($originalPreviewPath) {
-                  Copy-Item $originalPicPath.FullName $originalPreviewPath.FullName -Force
-              } else {
-                  # 如果pre.png不存在，则使用pic.png相同路径创建
-                  $newPreviewPath = Join-Path (Split-Path $originalPicPath.FullName -Parent) "pre.png"
-                  Copy-Item $originalPicPath.FullName $newPreviewPath -Force
-                  $originalPreviewPath = Get-Item $newPreviewPath
-              }
-              
-              Write-Output "Replaced background image at: $($originalPicPath.FullName)"
-              Write-Output "Replaced preview image at: $($originalPreviewPath.FullName)"
-              
-              # 记录路径变量
-              echo "project_path=$projectDir" >> $env:GITHUB_OUTPUT
-              echo "fprj_path=$fprjPath" >> $env:GITHUB_OUTPUT
-              echo "preview_path=$($originalPreviewPath.FullName)" >> $env:GITHUB_OUTPUT
+          # 查找原始的pic.png位置
+          $picFiles = @(Get-ChildItem $projectDir -Filter "pic.png" -Recurse)
+          if ($picFiles.Count -eq 0) {
+              Write-Warning "No pic.png found in project directory. Creating one in root directory."
+              $picPath = Join-Path $projectDir "pic.png"
+              [IO.File]::WriteAllBytes($picPath, $bytes)
           } else {
-              # 如果模板中没有pic.png，则创建在项目根目录
-              $newPicPath = Join-Path $projectDir "pic.png"
-              [IO.File]::WriteAllBytes($newPicPath, $bytes)
-              $newPreviewPath = Join-Path $projectDir "pre.png"
-              Copy-Item $newPicPath $newPreviewPath -Force
-              
-              Write-Output "Created background image at: $newPicPath"
-              Write-Output "Created preview image at: $newPreviewPath"
-              
-              # 记录路径变量
-              echo "project_path=$projectDir" >> $env:GITHUB_OUTPUT
-              echo "fprj_path=$fprjPath" >> $env:GITHUB_OUTPUT
-              echo "preview_path=$newPreviewPath" >> $env:GITHUB_OUTPUT
+              $picPath = $picFiles[0].FullName
+              [IO.File]::WriteAllBytes($picPath, $bytes)
           }
+          Write-Output "Saved background image to: $picPath"
+          
+          # 创建预览图
+          $preFiles = @(Get-ChildItem $projectDir -Filter "pre.png" -Recurse)
+          if ($preFiles.Count -eq 0) {
+              $prePath = Join-Path $projectDir "pre.png"
+          } else {
+              $prePath = $preFiles[0].FullName
+          }
+          Copy-Item $picPath $prePath -Force
+          Write-Output "Saved preview image to: $prePath"
           
           # 创建输出目录
           New-Item -Type Directory -Path "$projectDir\output" -Force
-
+          
+          # 输出路径变量
+          echo "project_path=$projectDir" >> $env:GITHUB_OUTPUT
+          echo "fprj_path=$newPath" >> $env:GITHUB_OUTPUT
+          echo "preview_path=$prePath" >> $env:GITHUB_OUTPUT
       # 5. Set up Python with Pillow
       - name: Set up Python 3.10 and Pillow
         uses: actions/setup-python@v4
